fixed margin on mobile

--- a/client/src/styles/_components.scss
+++ b/client/src/styles/_components.scss
@@ -12,6 +12,7 @@
   @media only screen and (max-width: 600px) {
     & {
       padding: 2rem 0;
+      margin: 0;
     }
   }
 }
